[project]
name = "rings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.4.2",
    "pot>=0.9.5",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torch-geometric>=2.6.1",
    "torchvision>=0.22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
